--- a/00_Node_cluster.ipynb
+++ b/00_Node_cluster.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "## cluster\n",
-    "A basic cluster definition "
+    "> A basic cluster definition "
    ]
   },
   {
