adding node_cluster class

--- a/00_Node_cluster.ipynb
+++ b/00_Node_cluster.ipynb
@@ -95,6 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export \n",
     "class cluster_node(cluster, NodeMixin):\n",
     "    def __init__(self, \n",
     "                name,\n",
