--- a/00_Node_cluster.ipynb
+++ b/00_Node_cluster.ipynb
@@ -34,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "import sklearn\n",
     "from sklearn import cluster, datasets\n",
     "import anytree\n",
@@ -768,7 +769,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.cluster_node at 0x7fc11262f4d0>"
+       "<__main__.cluster_node at 0x7f31cf59a3d0>"
       ]
      },
      "execution_count": null,
@@ -784,8 +785,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Helper functions\n",
+    "# Helper functions\n",
     "> Functions to help build the nodes "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## inside_polygon"
    ]
   },
   {
@@ -793,7 +801,99 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "def inside_polygon(list_points, poligon_check, min_percent):\n",
+    "    \"\"\"\n",
+    "    Help function to validate the number of points that are inside the polygon \n",
+    "    :param list list_points: List of points to concider \n",
+    "    :param shapely.geometry.Polygon poligon_check:   \n",
+    "    :param min_percent: Minimun percent of point to be consider inside \n",
+    "    :returns bool: True If the amount of points are inside.   \n",
+    "    \"\"\"\n",
+    "    if len(list_points)< 2:\n",
+    "        return False\n",
+    "    inside = [i for i in list_points if poligon_check.contains(i) ]\n",
+    "    #print(len(inside))\n",
+    "    if len(inside) > int(min_percent*len(list_points)):\n",
+    "        \n",
+    "        return True , list_points\n",
+    "    else: \n",
+    "        \n",
+    "        return False , inside"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## poligon_non_convex_from_Points\n",
+    "> Function tho create a polygon from a list of points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def poligon_non_convex_from_Points( points_li ):\n",
+    "    \"\"\"Create a random (no convex) poligon from the points\n",
+    "    The algorithm returns a polygon creatated from the points, the \n",
+    "    non convex part it is not always guaranteed.\n",
+    "    :param list points_li: list of shapely.geometry.Point \n",
+    "    :returns shapely.grometry.Polygon: The polygon created \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    triangles = shapely.ops.triangulate(shapely.geometry.Polygon(points_li))\n",
+    "    Pol = shapely.geometry.Polygon(points_li).convex_hull\n",
+    "    remove_triangles = []\n",
+    "    keep_triangles = []\n",
+    "    for i in triangles:\n",
+    "        inter = Pol.exterior.intersection(i)\n",
+    "        if type(inter) == shapely.geometry.linestring.LineString and inter.length != 0.0:\n",
+    "            remove_triangles.append(i)\n",
+    "        else:\n",
+    "            keep_triangles.append(i)\n",
+    "    return shapely.ops.cascaded_union(keep_triangles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## poligon_non_convex_random_gen\n",
+    "> Creates a poligon from a random number of points "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export \n",
+    "def poligon_non_convex_random_gen(npoints):\n",
+    "    \"\"\"Create a random (no convex) poligon from n points\n",
+    "    The algorithm returns a polygon creatated from n random 2d points the \n",
+    "    non convex part it is not always guaranteed.\n",
+    "    :param int npoints: Number of point to generate the polygon \n",
+    "    :returns shapely.grometry.Polygon: The poligon created\n",
+    "    \"\"\"\n",
+    "    points_r = np.random.random((npoints, 2))\n",
+    "    triangles = shapely.ops.triangulate(shapely.geometry.Polygon(points_r))\n",
+    "    Pol = shapely.geometry.Polygon(points_r).convex_hull\n",
+    "    remove_triangles = []\n",
+    "    keep_triangles = []\n",
+    "    for i in triangles:\n",
+    "        inter = Pol.exterior.intersection(i)\n",
+    "        if type(inter) == shapely.geometry.linestring.LineString and inter.length != 0.0:\n",
+    "            remove_triangles.append(i)\n",
+    "        else:\n",
+    "            keep_triangles.append(i)\n",
+    "    return shapely.ops.cascaded_union(keep_triangles)"
+   ]
   }
  ],
  "metadata": {
