--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -828,7 +828,7 @@
    "metadata": {},
    "source": [
     "## poligon_non_convex_from_Points\n",
-    "> Function tho create a polygon from a list of points"
+    "> Function create a polygon from a list of points"
    ]
   },
   {
