Change location and name files

--- a/src/01_tree_clusters.ipynb
+++ b/src/01_tree_clusters.ipynb
@@ -2,11 +2,402 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "79175d1f-ba70-463c-9c7a-2051f9a9faa0",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#hide\n",
+    "#default_exp Tree_clusters\n",
+    "from nbdev import *\n",
+    "from nbdev.showdoc import show_doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6262c6ee-596e-4222-9d2b-fdee763c6c05",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23b9619a-810a-49e1-9239-5fc6ae69b345",
+   "metadata": {},
+   "source": [
+    "# Tree Cluster class \n",
+    "> The class contains all the methods to construct and use the clusters tree structure and visualize it "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0a4db539-e7d2-4614-b3be-ccaf562ed24c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'HierarchicalGeoClustering'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2585249/974803849.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mHierarchicalGeoClustering\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcluster_node\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'HierarchicalGeoClustering'"
+     ]
+    }
+   ],
+   "source": [
+    "from HierarchicalGeoClustering.core import cluster_node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4a9fca0-a169-416b-a23d-5fb5b96d48b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class tree_clusters(object):\n",
+    "    levels = 0\n",
+    "    levels_nodes=[]\n",
+    "    root = None\n",
+    "    def __init__(self, \n",
+    "                levels=None, \n",
+    "                r_name = 'Root',\n",
+    "                level_str= 'l_',\n",
+    "                node_str ='n_',\n",
+    "                **kwargs\n",
+    "                ):\n",
+    "        random_seed = kwargs.get('random_seed', 123)\n",
+    "        random.seed(random_seed)\n",
+    "        if levels is None:\n",
+    "            self.levels = 0\n",
+    "            self.levels_nodes=[]\n",
+    "            self.root = None\n",
+    "            return \n",
+    "        \n",
+    "        self.levels = levels \n",
+    "        self.root = cluster_node(name=r_name)\n",
+    "        levels_nodes = []\n",
+    "        previus_level= []\n",
+    "\n",
+    "        for level in range(self.levels):\n",
+    "            if level==0:\n",
+    "                previus_level = [self.root]\n",
+    "                levels_nodes.append(previus_level)\n",
+    "            next_level= []\n",
+    "            for prev in  previus_level:\n",
+    "                n_childs = random.randint(0, 5)\n",
+    "                node_childs = [\n",
+    "                    cluster_node(name = prev.name +'_'+level_str+str(level)+'_'+node_str+str(i),\n",
+    "                                parent=prev) for i in  range(n_childs) \n",
+    "                            ]\n",
+    "                next_level = next_level +node_childs\n",
+    "                \n",
+    "            previus_level = next_level\n",
+    "            levels_nodes.append(next_level)     \n",
+    "        self.levels_nodes=levels_nodes\n",
+    "    \n",
+    "    def get_level(self, level):\n",
+    "        \"\"\"\n",
+    "        returns all the nodes in the level\n",
+    "        \"\"\"\n",
+    "        return self.levels_nodes[level]\n",
+    "    \n",
+    "    def get_node(self, level_int, node_int):\n",
+    "        \"\"\"\n",
+    "        returns all the nodes in the level\n",
+    "        \"\"\"\n",
+    "        return self.levels_nodes[level_int][node_int]\n",
+    "    ######Populate the structure \n",
+    "    def populate_tree(self, \n",
+    "                    number_per_cluster= None,\n",
+    "                    density_init= None,\n",
+    "                    factor_density = 3, \n",
+    "                    density_init_list = None, # list of densities by level\n",
+    "                    **kwargs\n",
+    "                    ):\n",
+    "\n",
+    "        for level_id, level in  enumerate(self.levels_nodes):\n",
+    "            rand_cluster_state= np.random.randint(0, 1500, len(level)) ## Random ints for random_seed\n",
+    "            if level_id ==0 :\n",
+    "                density_lev= density_init\n",
+    "            elif density_init is not None:\n",
+    "                density_lev= prev_density*3\n",
+    "            \n",
+    "            for clust_id, cluster in enumerate(level): \n",
+    "                if number_per_cluster is not None:\n",
+    "                    cluster.populate_cluster(num_points =number_per_cluster,\n",
+    "                                random_state = rand_cluster_state[clust_id],\n",
+    "                                **kwargs\n",
+    "                    )\n",
+    "                elif number_per_cluster is None and density_lev is not None:\n",
+    "                    cluster.populate_cluster(\n",
+    "                                density= density_lev,\n",
+    "                                random_state = rand_cluster_state[clust_id],\n",
+    "                                **kwargs\n",
+    "                    )\n",
+    "                elif number_per_cluster is None and density_lev is None and density_init_list is not None:\n",
+    "                    cluster.populate_cluster(\n",
+    "                                density= density_init_list[level_id],\n",
+    "                                random_state = rand_cluster_state[clust_id],\n",
+    "                                **kwargs\n",
+    "                    )\n",
+    "    ########Get all point in the tree\n",
+    "    def get_points_tree(self, level= None, iterative =False):\n",
+    "        \"\"\"\n",
+    "        Return  all the point in the tree\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if level != None:\n",
+    "            lis_level = self.get_level(level)\n",
+    "            all_points = []\n",
+    "            for node in lis_level:\n",
+    "                all_points = all_points + [i for i in node.append(node.get_points(all_tag = iterative ) )]\n",
+    "            return all_points\n",
+    "        else:\n",
+    "            all_points = []\n",
+    "            for level_t in  self.levels_nodes:\n",
+    "                for node in level_t:\n",
+    "\n",
+    "                    all_points =all_points+[i for i in node.get_points(all_tag = iterative )] \n",
+    "            return all_points\n",
+    "            #return self.root.get_points( all_tag = iterative )\n",
+    "    ####### visualize the structure \n",
+    "    def print_structure(self):\n",
+    "        \"\"\"print the tree structure\n",
+    "        \"\"\"\n",
+    "        print(self.root.name)\n",
+    "        for pre, _, node in RenderTree( self.root ):\n",
+    "            treestr = u\"%s%s\" % (pre, node.name)\n",
+    "            print(treestr.ljust(8))\n",
+    "    \n",
+    "    #### visualization of the clusters\n",
+    "    \n",
+    "    def visualize(self,\n",
+    "                    axs,\n",
+    "                    colors_levels= None,\n",
+    "                    **kwargs\n",
+    "                    ):\n",
+    "        if colors_levels is None:\n",
+    "            color_map_val= kwargs.get('color_map_val', 'jet')\n",
+    "            colors=  cm.get_cmap(color_map_val, len(self.levels_nodes))\n",
+    "            color_map= colors#matplotlib.colors.ListedColormap(colors)\n",
+    "        else:\n",
+    "            color_map= matplotlib.colors.ListedColormap(colors_levels)\n",
+    "        \n",
+    "        for level, level_clusters in enumerate(self.levels_nodes):\n",
+    "            for cluster in level_clusters:\n",
+    "                cluster_alpha= kwargs.get('cluster_size', .2)\n",
+    "                cluster.viewer_cluster(\n",
+    "                    axs,\n",
+    "                    color_cluster= color_map(level),\n",
+    "                    polygon_color = color_map(level),\n",
+    "                    **kwargs\n",
+    "                )\n",
+    "    ##### Vizulize levels\n",
+    "    def visualize_levels(self,\n",
+    "                        axs,\n",
+    "                        **kwargs\n",
+    "                        ):\n",
+    "        levels_vis = kwargs.get('levels', [0]),\n",
+    "        # print(levels_vis)\n",
+    "        color_map_val= kwargs.get('color_map_val', 'jet')\n",
+    "        colors=  cm.get_cmap(color_map_val, len(levels_vis)+1)\n",
+    "        color_map= colors#matplotlib.colors.ListedColormap(colors)\n",
+    "        \n",
+    "        # print([ lev_i for lev_i in levels_vis[0] ])\n",
+    "        for level, level_clusters in enumerate([ self.levels_nodes[lev_i] for lev_i in levels_vis[0] ]):\n",
+    "            for cluster in level_clusters:\n",
+    "                cluster_alpha= kwargs.get('cluster_alpha', .2)\n",
+    "                cluster.viewer_cluster(\n",
+    "                    axs,\n",
+    "                    color_cluster= color_map(level),\n",
+    "                    polygon_color = color_map(level),\n",
+    "                    **kwargs\n",
+    "                )\n",
+    "    #########################Copy\n",
+    "    def copy_dynamic(self, \n",
+    "                    list_levels_node = None,\n",
+    "                    **kwargs \n",
+    "                    ):\n",
+    "        \"\"\"\n",
+    "        creates a dynamic copy of the tree\n",
+    "        \"\"\"\n",
+    "        # duplicate_node\n",
+    "        #### Es necesario duplicar la estructura \n",
+    "        new_tree = tree_clusters()\n",
+    "        #new_tree.levels = self.levels\n",
+    "        verbose = kwargs.get('verbose', False )\n",
+    "        # print (kwargs.get('copy_pref', False ))\n",
+    "        \n",
+    "        for level_id ,level_tree in enumerate(self.levels_nodes):\n",
+    "            level_li =[]\n",
+    "            for node in level_tree:\n",
+    "                new_node = node.duplicate_node(**kwargs)\n",
+    "                ####Copy the relation to the parent \n",
+    "                ### ToDo change if the node is not include on the dinamic copy\n",
+    "                \n",
+    "                if node.parent in self.levels_nodes[level_id-1] and level_id!=0 :\n",
+    "                    result_index = self.levels_nodes[level_id-1].index(node.parent)\n",
+    "                    if verbose:\n",
+    "                        print(f\"The {node.name} parent has an index of {result}.\")\n",
+    "                    new_node.parent =  new_tree.levels_nodes[level_id-1][result_index]\n",
+    "                else : \n",
+    "                    new_node.parent =  None\n",
+    "\n",
+    "                level_li.append(new_node) \n",
+    "            new_tree.levels_nodes.append(level_li)\n",
+    "        new_tree.root = new_tree.levels_nodes[0][0]\n",
+    "        return new_tree\n",
+    "    \n",
+    "    def get_deepth(self):\n",
+    "        return len(self.levels_nodes)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def size(self):\n",
+    "        \"\"\" returns the number of node in the tree\n",
+    "        \"\"\"\n",
+    "        sum_s=0\n",
+    "        for i in self.levels_nodes:\n",
+    "            sum_s +=len(i)\n",
+    "        return sum_s\n",
+    "\n",
+    "    def size_points(self):\n",
+    "        \"\"\"\n",
+    "        Returns the number of points in the tree \n",
+    "        \n",
+    "        \"\"\"\n",
+    "        sum_s=0\n",
+    "        for level in self.levels_nodes:\n",
+    "            for node in level:\n",
+    "                sum_s += len(node.point_cluster_noise)\n",
+    "        return sum_s\n",
+    "    \n",
+    "    def get_dataframe(self, **kwargs):\n",
+    "        \"\"\"\n",
+    "        Get a pandas Dataframe with the points and the tags of for aech point\n",
+    "        :returns pandas.DataFrame : Returns a dataframe with the columns 'Tag ', 'Final_tag', 'level', and 'cluster_id'\n",
+    "        Tag: is the reference of the point belong to a cluster as noise\n",
+    "        Final_tag: the point can belong to a inner cluster this tag tell \n",
+    "        wich is the las tag category the point belong to.\n",
+    "        level: list of levels of the clusters that the point belongs to.\n",
+    "        cluster_id: list of cluster id that the points belongs to.  \n",
+    "        \"\"\"\n",
+    "        points_tags = self.root.tag_all_point()\n",
+    "        df_points_tag= pd.DataFrame(points_tags, columns= ['Points', 'Tag'])\n",
+    "        df_points_tag['Final_tag']= df_points_tag['Tag'].apply(lambda l :retag_from_strings(l) )\n",
+    "        levels_id = df_points_tag['Final_tag'].apply(lambda l: levels_from_strings(l,level_str='_l_', node_str='_n_'))\n",
+    "        df_points_tag['level'] = levels_id.apply(lambda l: l[0])\n",
+    "        df_points_tag['cluster_id'] = levels_id.apply(lambda l: l[1])\n",
+    "        return df_points_tag\n",
+    "    \n",
+    "\n",
+    "    def get_dataframe_recursive(self,  **kwargs):\n",
+    "        \"\"\"\n",
+    "        Returns a dataframe with the columns 'Tag ', 'Final_tag', 'level', and 'cluster_id'\n",
+    "        This function is with the purpouse to obtain the same tags for the 'level' and \n",
+    "        'cluster_id' from the recorsive clustering function\n",
+    "        Tag: is the reference of the point belong to a cluster as noise\n",
+    "        Final_tag: the point can belong to a inner cluster this tag tell \n",
+    "        wich is the las tag category the point belong to.\n",
+    "        level: list of levels of the clusters that the point belongs to.\n",
+    "        cluster_id: list of cluster id that the points belongs to.  \n",
+    "        \"\"\"\n",
+    "        ### Pedir que como parametros level_str='_l_', node_str\n",
+    "        func_level_nodes = kwargs.get('func_level_nodes' , string_recursive_tag) \n",
+    "        \n",
+    "\n",
+    "        points_tags = self.root.tag_all_point()\n",
+    "        df_points_tag= pd.DataFrame(points_tags, columns= ['Points', 'Tag'])\n",
+    "        df_points_tag['Final_tag']= df_points_tag['Tag'].apply(lambda l :retag_from_strings(l) )\n",
+    "        levels_id = df_points_tag['Final_tag'].apply(lambda l: func_level_nodes( l,tree_rec= self,**kwargs))\n",
+    "        df_points_tag['level'] = levels_id.apply(lambda l: l[0])\n",
+    "        df_points_tag['cluster_id'] = levels_id.apply(lambda l: l[1])\n",
+    "        return df_points_tag\n",
+    "    \n",
+    "    def get_labels_point_nodes(self, **kwargs):\n",
+    "        \"\"\"The function returns the poinst of the tree labeled for each node\n",
+    "        \"\"\"\n",
+    "        all_points=[] \n",
+    "        level_get = kwargs.get('level_get' , self.get_deepth())\n",
+    "        for num_lev, level in enumerate( self.levels_nodes):\n",
+    "            if num_lev < level_get:\n",
+    "                all_level = []\n",
+    "                for node in level:\n",
+    "                    all_level.append([(i,node.name + '_noise')  for i in node.point_cluster_noise])\n",
+    "                all_points.append(all_level)\n",
+    "            elif num_lev == level_get:\n",
+    "                all_level = []\n",
+    "                for node in level:\n",
+    "                    all_level.append([(i,node.name + '_noise')  for i in node.get_point_decendent()])\n",
+    "                all_points.append(all_level)\n",
+    "\n",
+    "        applaztalista = []\n",
+    "        for level_p in all_points:\n",
+    "            for node_res in level_p:\n",
+    "                applaztalista =applaztalista +node_res  \n",
+    "        return applaztalista\n",
+    "\n",
+    "\n",
+    "    def get_dataframe_recursive_node_label(self,  **kwargs):\n",
+    "        \"\"\"\n",
+    "        Returns a dataframe with the columns 'Tag ', 'Final_tag', 'level', and 'cluster_id'\n",
+    "        This function is with the purpouse to obtain the same tags for the 'level' and \n",
+    "        'cluster_id' from the recursive clustering function\n",
+    "        Tag: is the reference of the point belong to a cluster as noise\n",
+    "        Final_tag: the point can belong to a inner cluster this tag tell \n",
+    "        wich is the las tag category the point belong to.\n",
+    "        level: list of levels of the clusters that the point belongs to.\n",
+    "        cluster_id: list of cluster id that the points belongs to.  \n",
+    "        \"\"\"\n",
+    "        ### Pedir que como parametros level_str='_l_', node_str\n",
+    "        func_level_nodes = kwargs.get('func_level_nodes' , string_recursive_tag) \n",
+    "        \n",
+    "\n",
+    "        points_tags = self.get_labels_point_nodes(**kwargs)\n",
+    "        df_points_tag= pd.DataFrame(points_tags, columns= ['Points', 'Tag'])\n",
+    "        df_points_tag['Final_tag']= df_points_tag['Tag'].apply(lambda l :retag_from_strings(l) )\n",
+    "        if func_level_nodes == string_recursive_tag:\n",
+    "            levels_id = df_points_tag['Final_tag'].apply(lambda l: func_level_nodes( l,tree_rec= self,**kwargs))\n",
+    "        else:\n",
+    "            levels_id = df_points_tag['Final_tag'].apply(lambda l: func_level_nodes( l,**kwargs))\n",
+    "        df_points_tag['level'] = levels_id.apply(lambda l: l[0])\n",
+    "        df_points_tag['cluster_id'] = levels_id.apply(lambda l: l[1])\n",
+    "        return df_points_tag\n",
+    "\n",
+    "    ########################Noise signal tree \n",
+    "    def get_tag_noise_signal_tree(self):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Get the tags for each point in the cluster node \n",
+    "        Returns all noise level tags \n",
+    "        :returns: A dataframe with the tags of the all the points. \n",
+    "        \"\"\"\n",
+    "        ### tag for each level \n",
+    "        all_point_tag_levels= []\n",
+    "        for num,  level in enumerate(self.levels_nodes):\n",
+    "            for node in level:\n",
+    "                all_point_tag_levels = all_point_tag_levels+ [ (i[0],'1_'*num +i[1]) for i in node.tag_low_level_noise_signal()]\n",
+    "        #### Names a\n",
+    "        df_tags= pd.DataFrame(zip([i[0] for i in all_point_tag_levels],\n",
+    "                                  [i[1] for i in all_point_tag_levels] ),\n",
+    "                              columns= ['Points', 'Final_tag']) \n",
+    "\n",
+    "        df_tags['concat_tags'] =  df_tags['Final_tag'].apply(lambda l:\n",
+    "                                                        '_'.join(l.split('_')+['noise']*(len(self.levels_nodes)-len(l.split('_'))))\n",
+    "                                                    )\n",
+    "        df_tags['concat_tags_signal'] = df_tags['concat_tags']\n",
+    "        \n",
+    "        return df_tags\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
