Tree_cluster class added

--- a/src/01_tree_clusters.ipynb
+++ b/src/01_tree_clusters.ipynb
@@ -15,11 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6262c6ee-596e-4222-9d2b-fdee763c6c05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export \n",
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "from HierarchicalGeoClustering.Node_cluster import cluster_node"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,29 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0a4db539-e7d2-4614-b3be-ccaf562ed24c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'HierarchicalGeoClustering'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2585249/974803849.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mHierarchicalGeoClustering\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcluster_node\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'HierarchicalGeoClustering'"
-     ]
-    }
-   ],
-   "source": [
-    "from HierarchicalGeoClustering.core import cluster_node"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e4a9fca0-a169-416b-a23d-5fb5b96d48b6",
    "metadata": {},
    "outputs": [],
@@ -398,6 +384,25 @@
     "        return df_tags\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c367774a-e4d4-4fab-a823-970b4408bf0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide \n",
+    "tree = tree_clusters(3, random_seed= 123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd7cf9e7-77cc-4877-963b-09ac11d303e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
