--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -63,6 +63,9 @@
    "source": [
     "#export \n",
     "class cluster(object):\n",
+    "    \"\"\"\n",
+    "    A Basic class of a cluster \n",
+    "    \"\"\"\n",
     "    polygon_cluster = None\n",
     "    point_cluster_noise = None\n",
     "\n",
@@ -79,6 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "clus=cluster()"
    ]
   },
@@ -763,21 +767,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<__main__.cluster_node at 0x7f31cf59a3d0>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'cluster_node' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2585232/3125715847.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#hide\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcluster_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cluster_node' is not defined"
+     ]
     }
    ],
    "source": [
+    "#hide\n",
     "cluster_node(name='')"
    ]
   },
