Clustering module added

--- a/src/01_tree_clusters.ipynb
+++ b/src/01_tree_clusters.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "markdown",
    "id": "23b9619a-810a-49e1-9239-5fc6ae69b345",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Tree Cluster class \n",
     "> The class contains all the methods to construct and use the clusters tree structure and visualize it "
@@ -395,6 +397,14 @@
     "#hide \n",
     "tree = tree_clusters(3, random_seed= 123)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffa14115-319c-4bf4-9fcd-9f74a40b4ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
