--- a/src/02_Clustering.ipynb
+++ b/src/02_Clustering.ipynb
@@ -7,8 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#default_exp Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8e1d6b6-ecaa-40aa-af5e-9952e137fcc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#hide\n",
-    "#default_exp Clustering\n",
     "from nbdev import *\n",
     "from nbdev.showdoc import show_doc"
    ]
