Export clustering functions

--- a/src/02_Clustering.ipynb
+++ b/src/02_Clustering.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c8e1d6b6-ecaa-40aa-af5e-9952e137fcc0",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4363959e-b31e-4325-9f9f-8d60ccbc4ee0",
    "metadata": {},
    "outputs": [],
@@ -59,11 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3646c9cf-05c5-4d02-a3db-030b3834ba66",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def compute_dbscan(cluster,  **kwargs):\n",
     "    \n",
     "    \"\"\" Sklearn DBSCAN wrapper.\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aa88e40b-6f7a-480a-a346-25146d817c38",
    "metadata": {},
    "outputs": [],
@@ -132,11 +133,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "7fadc0e6-da7b-4d25-9099-d45d05659d46",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def recursive_clustering(\n",
     "                this_level,  # Dictionary with Points\n",
     "                to_process,  # levels to process\n",
@@ -201,7 +203,6 @@
     "                               cluster_tree=cluster_tree,\n",
     "                               level= level,\n",
     "                               algorithm=algorithm,\n",
-    "                               \n",
     "                               **kwargs\n",
     "                               )\n",
     "    else:\n",
