--- a/src/02_Clustering.ipynb
+++ b/src/02_Clustering.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "## Compute DBSCAN\n",
-    "A wapper function to obtain the DBSCAN sluters by levels"
+    "A wapper function to obtain the DBSCAN cluters by levels"
    ]
   },
   {
@@ -67,7 +67,9 @@
     "#export\n",
     "def compute_dbscan(cluster,  **kwargs):\n",
     "    \n",
-    "    \"\"\" Sklearn DBSCAN wrapper.\n",
+    "    \"\"\" \n",
+    "    Sklearn DBSCAN wrapper.\n",
+    "    \n",
     "    :param cluster: a (N,2) numpy array containing the obsevations\n",
     "\n",
     "    :returns list with numpy arrays for all the clusters obtained\n",
@@ -154,12 +156,19 @@
     "    until no more clusters satisfy the condition\n",
     "        \n",
     "    :param dict this_level: level is the current level \n",
+    "    \n",
     "    :param int to_process: the max level to process\n",
+    "    \n",
     "    :param double eps: The epsilon parameter distance to pass to the needed algorithm \n",
-    "    :param cluster_tree : \n",
+    "    \n",
+    "    :param list cluster_tree : list of list to insert the levels \n",
+    "    \n",
     "    :param bool verbose : To print \n",
+    "    \n",
     "    :param double decay: In the use of dbscan the deacy parameter to reduce eps\n",
+    "    \n",
     "    :param int min_points_cluster: The min point for each cluster to pass to algorithm\n",
+    "    \n",
     "    :param str algorithm:  The string of the algorithm name to use\n",
     "    \"\"\"\n",
     "\n",
