Show documentation Node_cluster

--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -420,9 +420,12 @@
     "        The tag the element of the node using the labels noise or signal\n",
     "        as a tag, if a set of point is pass (point_check != None)  \n",
     "        the elements are treated as part of the cluster and label it\n",
-    "        accordingly. \n",
-    "        :params self \n",
-    "        :params point_check A list MultiPoint or list with Points to tag \n",
+    "        accordingly.\n",
+    "        \n",
+    "        :params list point_check: A list of shapely Points to tag (if None \n",
+    "                            tags the points inside the cluster) \n",
+    "        \n",
+    "        :returns: A list of tuples (points , tag)\n",
     "        \"\"\"         \n",
     "        if point_check is None:\n",
     "            all_points_cluster = self.get_points()\n",
@@ -784,6 +787,31 @@
    "source": [
     "#hide\n",
     "cluster_node(name='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Methods (cluster_node)\n",
+    "\n",
+    "In the following section the mos important methos of the cluster_node class are review "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### tag_low_level_noise_signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_doc(cluster_node.tag_low_level_noise_signal)"
    ]
   },
   {
