Change documantitaion org compare

--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -776,7 +776,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.cluster_node at 0x7f1b09fc0ed0>"
+       "<__main__.cluster_node at 0x7f5976a8b0d0>"
       ]
      },
      "execution_count": 7,
@@ -799,17 +799,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### tag_low_level_noise_signal"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"cluster_node.tag_low_level_noise_signal\" class=\"doc_header\"><code>cluster_node.tag_low_level_noise_signal</code><a href=\"__main__.py#L316\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>cluster_node.tag_low_level_noise_signal</code>(**`point_check`**=*`None`*)\n",
+       "\n",
+       "The tag the element of the node using the labels noise or signal\n",
+       "as a tag, if a set of point is pass (point_check != None)  \n",
+       "the elements are treated as part of the cluster and label it\n",
+       "accordingly.\n",
+       "\n",
+       ":params list point_check: A list of shapely Points to tag (if None \n",
+       "                    tags the points inside the cluster) \n",
+       "\n",
+       ":returns: A list of tuples (points , tag)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "show_doc(cluster_node.tag_low_level_noise_signal)"
    ]
@@ -823,15 +841,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## inside_polygon"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
